<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.visualpolish.StyleActivity">

    <!-- All mail folder views -->
    <!-- Apply the "inboxStyle" to the inbox text view -->
    <TextView
        style="@style/inboxStyle"
        android:drawableStart="@drawable/ic_inbox"
        android:drawableLeft="@drawable/ic_inbox"
        android:text="@string/inbox" />

    <!-- Apply the "folderStyle" to all of these views and delete the redundant properties -->
    <TextView
        style="@style/folderStyle"
        android:drawableStart="@drawable/ic_star"
        android:drawableLeft="@drawable/ic_star"
        android:text="@string/starred" />

    <TextView
        style="@style/folderStyle"
        android:drawableStart="@drawable/ic_drafts"
        android:drawableLeft="@drawable/ic_drafts"
        android:text="@string/drafts" />

    <TextView
        style="@style/folderStyle"
        android:drawableStart="@drawable/ic_sent"
        android:drawableLeft="@drawable/ic_sent"
        android:text="@string/sent" />

    <TextView
        style="@style/folderStyle"
        android:drawableStart="@drawable/ic_trash"
        android:drawableLeft="@drawable/ic_trash"
        android:text="@string/trash" />

</LinearLayout>
